<resources>
    <string name="app_name">kotlin-mvvm-hilt-retrofit-room</string>

    <string name="button_random">Random Books</string>
    <string name="button_search">Search Books</string>
    <string name="button_favorite">Favorites Books</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_txtTitle">Title</string>
    <string name="random_txtAuthor">Author</string>
    <string name="random_book_image_describe">book image</string>

    <string name="search_failed">search failed!</string>
</resources>