<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favorite_recycler_item_layout"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/img_fav_recycler_book"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/random_book_image_describe"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_fav_recycler_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/random_txtTitle"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_fav_recycler_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14sp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/random_txtAuthor"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
