<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/btnRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="1.1"
        android:text="@string/button_random"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="@+id/btnSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="1.1"
        android:text="@string/button_search"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFavorites"
        app:layout_constraintEnd_toEndOf="@+id/btnFavorites"
        app:layout_constraintStart_toStartOf="@+id/btnFavorites"
        app:layout_constraintTop_toBottomOf="@+id/btnRandom" />

    <Button
        android:id="@+id/btnFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="1.1"
        android:text="@string/button_favorite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch" />
</androidx.constraintlayout.widget.ConstraintLayout>